--- a/ApiContatos/appsettings.json
+++ b/ApiContatos/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=DESKTOP-QSEPC9A\\SQLEXPRESS; database=ApiContatos; trustedservercertificate=true; trust_connection=true"
+    "DefaultConnection": "server=LEANDRO\\SQLEXPRESS; database=ApiContatos; trustservercertificate=true; trusted_connection=true"
   }
 }
